# trackmap

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: pages.yml
src/: combine.py  download_relation.py  sorting.json
tracks/: 9445204-REX 154x-Linz Hbf-Summerau.geojson
tracks/Wiener Linien/: 6390163-U4.geojson  6486683-U2.geojson
tracks/ar/: 129404-TC-Avenida Maipú-Delta.geojson  4572178-LM-Retiro-Tigre.geojson
tracks/at/: 10867768-REX7.geojson  1658534-R91-Payerbach-Reichenau-Mürzzuschlag.geojson  1658658-R170-Attnang-Gmunden.geojson  16837387-CJX9-Payerbach-Reichenau-Wien Floridsdorf.geojson  2396667-vorchdorf-lambach.geojson  2396713-gmunden-vorchdorf.geojson  3654420-RJ-Bludenz.geojson  3774028-REX6.geojson  3855633-172-Vöcklabruck-Kammer.geojson  4850646-REX4.geojson  7577250-WESTbahn.geojson  7928980-RJ-Salzburg Hbf-Flughafen Wien.geojson  7948587-REX41.geojson  8487616-REX51.geojson
tracks/at/Wiener Linien/: 17513521-U1.geojson  6389747-U6.geojson  (+3 more)
tracks/ba/: 2674114-mostar.geojson
tracks/bg/: 16009047-Sofia-Plovdiv.geojson
tracks/intl/: 14723679-Bar-Belgrade.geojson  19046835-Vienna-Kyiv.geojson  3779847-EC102;EC104-Wien Hbf-Warszawa Wschodnia.geojson  8079509-RJ-Praha hl.n.-Graz Hbf.geojson  9477227-NJ 491-Hamburg-Altona-Wien Hbf.geojson
tracks/lt/: 18237947-24-Mockava-Vilnius.geojson
tracks/me/: 18789775-R 7100.geojson
tracks/pe/: 5646859-None-Cusco - Machu Picchu.geojson
tracks/pl/: 13087177-SKA1-Kraków Lotnisko-Wieliczka Rynek-Kopalnia.geojson  18237945-Warzawa-Suwalki.geojson
web/: index.html
