[project]
name = "trackmap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["geojson>=3.2.0", "overpass>=0.7.2", "shapely>=2.1.1"]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.12.7",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
    "D",      # pydocstyle
    "CPY",    # flake8-copyright
    "PGH003", # Use specific error codes when using noqa
    "T201",   # print found
    "S101",   # Use of assert detected
    "E741",   # Ambiguous variable name
]
